<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Web Field Manager</string>
    <string name="login_button">Login</string>
    <string name="login_url_left">http://192.168.1.100/</string>
    <string name="login_url_right">http://zzt2013.no-ip.biz/</string>
    <string name="logging_in">Logging in. Please wait...</string>
    <string name="login_fail">Login failed. Please check service link.</string>
    <string name="downloading">Downloading data. Please wait...</string>
    <string name="network">Network</string>
    <string name="promotions">Promotions:</string>
    <string name="orders_add">Add</string>
    <string name="order_customer">Customer name:</string>
    <string name="order_date">Order date:</string>
    <string name="order_time">Order time:</string>
    <string name="order_delivery">Delivery date:</string>
    <string name="order_delivery_time">Delivery time:</string>
    <string name="order_ship_to">Ship to</string>
    <string name="order_bill_to">Bill to</string>
    <string name="order_shipping_address">Platynowa 24A/8\n80-041\nGdansk</string>
    <string name="order_billing_address">Hacjenda 56\n123-785\nGranada</string>
    <string name="order_comments">Comments</string>
    <string name="order_example_comment">Very interesting information on the dangling subject</string>
    <string name="order_total_products">Total products:</string>
    <string name="order_tp_example">4 products</string>
    <string name="order_total_value">Total order value:</string>
    <string name="order_value_example">1.345\u20ac</string>
    <string name="order_discount">Discount:</string>
    <string name="orders_id">Id</string>
    <string name="orders_ship_to">Ship to</string>
    <string name="orders_product_no">#products</string>
    <string name="orders_date">Date</string>
    <string name="sort_asc">&#x25B2;</string>
    <string name="sort_dsc">&#x25BC;</string>
    <string name="client">Client</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="user">User</string>
    <string name="state">State</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="id">Id</string>
    <string name="family">Family</string>
    <string name="category">Category</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="quantity">#Quantity</string>
    <string name="save_and_add_products">Save and Add products</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_customers">Customers</string>
    <string name="title_activity_customer_details">CustomerDetails</string>
    <string name="send">Send</string>
    <string name="pin">PIN</string>
    <string name="set_pin_welcome">Welcome, set a new PIN now to protect your data</string>
    <string name="set_pin">Set PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="old_pin">Old PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="repeat_pin">Repeat PIN</string>
    <string name="pin_saved">PIN Saved</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Are you sure?</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter value to search</string>
    <string name="info">info</string>
    <string name="new_order">new order</string>
    <string name="new_email">email</string>
    <string name="synchronization_in_progress">Synchronization in progress.</string>
    <string name="edit">Edit</string>
    <string name="assign_position">Assign position</string>
    <string name="action_home">Home</string>
    <string name="action_customers">Customers</string>
    <string name="action_products">Products</string>
    <string name="action_order_templates">Order templates</string>
    <string name="action_save_draft">Save Draft</string>
    <string name="action_send_order">Send Order</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="do_you_want_to_log_out">Do you want to log out now ?</string>
    <string name="do_you_want_to_leave_order">Do you really want to abandon this order ?"</string>
    <string name="logged_out">Successfuly Logged Out</string>
    <string name="action_orders">Orders</string>
    <string name="VAT">#VAT</string>
    <!-- Errors -->
    <string name="no_user_token">No user token. Please login before setting PIN</string>
    <string name="error_missing_service_address">Service address is not specified. Please check settings.</string>
    <string name="error_login_failed">Login failed. Please check email and password.</string>
    <string name="error_pins_dont_match">Provided PINs do not match.</string>
    <string name="error_pin_wrong">Wrong PIN.</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_synchronization">SynchronizationActivity</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_order_templates">OrderTemplates</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_order_new">OrderNew</string>
    <string name="title_activity_order">Order</string>
    <string name="title_localization_service">Localization Service</string>
    <string name="home">Home</string>
    <string name="drawer_title">All activities</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="select_order_template">Select order template</string>
    
    <string name="order_total_free_qty_value">Value of free products</string>
    <string name="order_total_discount">Total discount value</string>
    <string name="order_total_before_discount">Value before discounts</string>
    <string name="order_payterms_discount">Pay terms discount</string>
    <string name="order_template_threshold_discount">Template threshold discount</string>
    <string name="order_template_discount">Template discount</string>
    
    <string name="order_status_draft">DRAFT</string>
	<string name="order_status_outbox">OUTBOX</string>
	<string name="order_status_sent">SENT</string>
	<string name="order_status_approval">APPRIVAL</string>
	<string name="order_status_approved">APPROVED</string>
	<string name="order_status_edit">EDIT</string>
	<string name="order_status_processed">PROCESSES</string>
	<string name="order_status_canceled">CANCELED</string>
    
    <string name="pick_promo_pay_term_details">Pick promo pay term details</string>
	
    <string name="order_saved">Order saved</string>
    <string name="order_send_ok">Order send</string>
    <string name="order_send_error">Order send with errors. Please contatct Administrator.</string>

    <string name="set_quantity">Set Order Quantity</string>
    <string name="no_gps_error">GPS is powered down. Go to settings to switch it on.</string>
    <string name="no_network_error">Network is turned off or you are currently in airplane mode. Please enable network or gps to use localization features!</string>
    <string name="billing_error">Please pick billing address\n</string>
    <string name="shipping_error">Please pick shipping address\n</string>
    <string name="order_date_error">Please add proper order date\n</string>
    <string name="order_time_error">Please enter proper order time\n</string>
    <string name="delivery_date_error">Please add proper delivery date\n</string>
    <string name="delivery_time_error">Please enter proper delivery time\n</string>
    <string name="no_promo_picked_error">Please pick pick promo pay term details\n</string>
    <string name="save">Save</string>
    
    <string name="pref_default_connection_service">http://zzt2013.no-ip.biz/wfm_webapi/Json</string>
	<string name="pref_category_user">User</string>
	<string name="pref_category_connection">Connection</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_title_service_address">Service address</string>
    
    <string name="product_code">Code</string>
    <string name="product_price">Price</string>
    <string name="product_stock">Stock</string>
    
    <string-array name="nav_titles">
        <item>Home</item>
        <item>Orders</item>
        <item>Customers</item>
        <item>Products</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_icons">
        <item>ic_action_home_new</item>
        <item>ic_action_orders_new</item>
        <item>ic_action_customers_new</item>
        <item>ic_action_products_new</item>
        <item>ic_action_settings_new</item>
    </string-array>
    <string-array name="home_tabs">
        <item>Customers</item>
        <item>Draft orders</item>
    </string-array>
    <string-array name="customers_context_menu">
        <item>Assing position</item>
        <item>View details</item>
        <item>+Add order</item>
    </string-array>

    <!-- Dummy Db -->
    <string-array name="customers">
        <item>ic_action_customers_new</item>
        <item>Pablo Picasso</item>
        <item>Methodist University, 5400 Ramsey Street Fayetteville NC 28311</item>
        <item>no vat, sorry</item>
        <item>ic_action_customers_new</item>
        <item>Bill Gates</item>
        <item>Bullion Ave. 56 St</item>
        <item>1232435654... 2 big 2 fit</item>
    </string-array>

    <string name="title_activity_addproducts">AddproductsActivity</string>
    
    <!-- Order line errors  -->
    <string name="order_line_min_error">&lt;%s</string>
	<string name="order_line_max_error">&gt;%s</string>
	<string name="order_line_ok">OK</string>
</resources>