<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="web.field.AddproductsActivity" >

    <item
        android:id="@+id/action_save_draft"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_save_draft"
        android:title="@string/action_save_draft"/>
    
    <item
        android:id="@+id/action_send_order"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_send"
        android:title="@string/action_send_order"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_action_logout"/> 

</menu>
