<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="100"
	    android:padding="10dip"
	    >
	    <TextView
	        android:layout_width="0dip"
	  		android:layout_height="wrap_content"
	  		android:layout_weight="8" />
	    <TextView
	        android:layout_width="0dip"
	  		android:layout_height="wrap_content"
	  		android:text="@string/orders_id"
	  		android:layout_weight="7"
	  		android:layout_gravity="right" />
	    <TextView
	        android:layout_width="0dip"
	  		android:layout_height="wrap_content"
	  		android:text="@string/orders_ship_to"
	  		android:layout_weight="45" />
	    <TextView
	        android:layout_width="0dip"
	  		android:layout_height="wrap_content"
	  		android:text="@string/orders_product_no"
	  		android:layout_weight="15" />
    <TextView
	        android:layout_width="0dip"
        android:layout_height="wrap_content"
	  		android:text="@string/orders_date"
	  		android:layout_weight="20" />	      
	</LinearLayout>

	<View
	    android:layout_height="1dip"
	    android:layout_width="match_parent"
	    android:background="@color/list_div" />
	
	
	<ListView
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dip"
        android:divider="@color/list_div"
        android:dividerHeight="1dip" />
	
</LinearLayout>
